# teeshield

./: .gitignore  CLAUDE.md  LICENSE  ROADMAP.md  action.yml  batch-scan-results.json  pyproject.toml  sdk_selfcheck.py
.github/workflows/: ci.yml  scan.yml
docs/internal/: 001A-full-project-audit-2026-03-13.md
src/agentshield/rewriter/: runner.py
src/agentshield/scanner/: runner.py
src/spidershield/: models.py  spiderrating.py
src/spidershield/rewriter/: quality_gate.py  runner.py
src/spidershield/scanner/: description_quality.py  security_scan.py
src/teeshield/: __init__.py  cli.py
src/teeshield/agent/: __init__.py  allowlist.py  fixer.py  issue_codes.py  models.py  pinning.py  report.py  scanner.py  skill_scanner.py  toxic_flow.py
src/teeshield/evaluator/: runner.py
src/teeshield/hardener/: prompt.py  quality_gate.py  runner.py
src/teeshield/rewriter/: prompt.py  providers.py  quality_gate.py  runner.py
src/teeshield/scanner/: description_quality.py
tests/: test_agent_sarif.py  test_allowlist.py  test_cli.py  test_e2e_pipeline.py  test_evaluator_v2.py  test_golden_descriptions.py  test_hardener_v2.py  test_issue_codes.py  test_llm_integration.py  test_rewriter.py  test_rewriter_v2.py  test_scan_runner.py  test_scanner.py  test_scoring_spec.py  test_sdk_integration.py  test_security_patterns_edge.py  test_semgrep_scan.py  test_toxic_flow.py
website/: package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/about/: page.tsx
website/src/app/architecture/: page.tsx
website/src/app/blog/: page.tsx
website/src/app/cloud/: page.tsx
website/src/app/docs/: page.tsx
website/src/app/docs/agent/: page.tsx
website/src/app/docs/audit/: page.tsx
website/src/app/docs/cli/: page.tsx
website/src/app/docs/dlp/: page.tsx
website/src/app/docs/policy/: page.tsx
website/src/app/docs/runtime-guard/: page.tsx
website/src/app/integrations/: page.tsx
website/src/app/pricing/: page.tsx
website/src/app/privacy/: page.tsx
website/src/app/security/: page.tsx
website/src/app/terms/: page.tsx
website/src/components/: code-block.tsx  footer.tsx  navbar.tsx  particles.tsx
website/src/components/sections/: architecture.tsx  code-example.tsx  features.tsx  hero.tsx  oss-cloud.tsx  spiderrating.tsx  stats.tsx  why.tsx
